<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateColisActivity"
    android:background="@color/colorPrimaryDarkSplash">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimarySplash"
        android:gravity="center"
        android:text="Ajouter un colis"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="bouton de retour"
        android:src="@drawable/back" />
    <ImageButton
        android:id="@+id/btn_faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/faq" />

    <EditText
        android:id="@+id/txt_colis_nom"
        android:layout_below="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/nom"
        android:maxLength="15"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_colis_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/txt_colis_nom"
        android:hint="@string/coordonnee_x"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="6"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_colis_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_colis_x"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/coordonnee_y"
        android:lines="2"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="6"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_colis_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_colis_y"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false"
        android:hint="La date de livraison prévu"/>


    <Button
        android:id="@+id/btn_add_colis"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/txt_colis_date"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/roundedbutton"/>

</RelativeLayout>